--- a/pages/members.html
+++ b/pages/members.html
@@ -55,12 +55,11 @@
         <div class="grid-item">
           <img src="assets/images/profile_male.png" alt="Mr. A headshot" />
           <div class="member-content">
-            <p class="member-name">Mr. A</p>
-            <p class="member-role">PhD Candidate</p>
-            <p class="member-affil">Towson University</p>
+            <p class="member-name">Anamika Das</p>
+            <p class="member-role">MSc in ITM</p>
+            <p class="member-affil">UT Dallas</p>
             <p class="member-bio">
-              Works on program analysis and LLM-in-the-loop patch generation with a focus on
-              secure-by-default developer tooling.
+              TBD
             </p>
             <button class="member-toggle" aria-expanded="false" aria-controls="member-a-extra">More</button>
             <div id="member-a-extra" class="member-extra" aria-hidden="true">
@@ -81,6 +80,39 @@
               </a>
               <a class="github" href="#" aria-label="GitHub"><i class="fa fa-github"></i></a>
               <a class="linkedin" href="#" aria-label="LinkedIn"><i class="fa fa-linkedin"></i></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="grid-item">
+          <img src="assets/images/profile_male.png" alt="Mr. A headshot" />
+          <div class="member-content">
+            <p class="member-name">Md Ahnaf Al Zabir</p>
+            <p class="member-role">CS Undergrad</p>
+            <p class="member-affil">UT Dallas</p>
+            <p class="member-bio">
+              Working on AI Agent Project.
+            </p>
+            <button class="member-toggle" aria-expanded="false" aria-controls="member-a-extra">More</button>
+            <div id="member-a-extra" class="member-extra" aria-hidden="true">
+              <h4>Affiliations & Memberships</h4>
+              <ul class="member-list">
+                <li>Artificial Intelligence Society, AIS UTD</li>
+                <li>FinTech UTD</li>
+              </ul>
+              <h4>Expertise</h4>
+              <ul class="member-tags">
+                <li>AI/ML Engineer</li>
+                <li>LLMs</li>
+                <li>Developer Tooling</li>
+              </ul>
+            </div>
+            <div class="member-links">
+              <a class="site" href="https://notzabir1.netlify.app" aria-label="Site">
+                <img src="assets/images/website.png" alt="Site" />
+              </a>
+              <a class="github" href="https://www.github.com/notzabir" aria-label="GitHub"><i class="fa fa-github"></i></a>
+              <a class="linkedin" href="https://www.linkedin.com/in/md-ahnaf-al-zabir" aria-label="LinkedIn"><i class="fa fa-linkedin"></i></a>
             </div>
           </div>
         </div>
