--- a/pages/home.html
+++ b/pages/home.html
@@ -20,41 +20,18 @@
     </div>
   </div>
   <div class="home-description">
-    <h1>Introduction</h1>
+    <h1>Welcome to LUCID Lab</h1>
     <p>
-      LUCID Lab (Learning and Usability for Cybersecurity and Intelligent Decisions), led by Dr. Khandakar Ashrafi
-      Akbar,
-      investigates how artificial general intelligence (AGI), machine learning, and generative AI can transform the
-      landscape
-      of security, privacy, and intelligent decision-making. Guided by the vision of “Accessible by All Security”, our
-      mission
-      is to design defenses that are not only usable, scalable, and sustainable, but also meaningful for real-world
+      LUCID (Learning and Usability for Cybersecurity and Intelligent Decisions) Lab, led by Dr. Khandakar Ashrafi
+      Akbar, explores how AI and generative technologies can transform security, privacy, and decision-making. Guided by the
+      vision of “Accessible by All Security”, we design defenses that are usable, scalable, and impactful for real-world
       adoption.
     </p>
     <br>
     <p>
-      Our research spans a diverse set of areas, including:
-      <ul style="list-style-type:square;">
-        <li> Human-Centered and Usable Security – ensuring systems are secure while remaining intuitive and inclusive for all
-          users.
-        </li>
-        <li>
-          Exploration of Nuanced Factors in Generative AI Systems – uncovering hidden biases, risks, and opportunities
-          within advanced AI models.
-        </li>
-        <li>
-          Development of Context-Aware Intelligent Systems – building adaptive technologies that make secure, informed
-          decisions in dynamic environments.
-        </li>
-        <li>
-          Design of Resilient and Interpretable Evaluation Metrics – creating transparent methods to measure the
-          robustness and fairness of intelligent systems.
-        </li>
-        <li>
-          Performance Evaluation and Analysis of Generative AI Models – advancing rigorous frameworks for testing and
-          optimizing next-generation AI.
-        </li>
-      </ul>
+      Our work spans human-centered and usable security, exploring the risks and opportunities in generative AI, building
+      context-aware intelligent systems, designing transparent and resilient evaluation metrics, and advancing the
+      performance analysis of next-generation AI models.
     </p>
   </div>
 </section>
