--- a/pages/members.html
+++ b/pages/members.html
@@ -53,7 +53,7 @@
       <h3 class="members-group-title">Volunteer Researcher</h3>
       <div class="members-grid-container">
         <div class="grid-item">
-          <img src="assets/images/profile_male.png" alt="Mr. A headshot" />
+          <img src="assets/images/Anamika.JPG" alt="Anamika Das" />
           <div class="member-content">
             <p class="member-name">Anamika Das</p>
             <p class="member-role">MSc in ITM</p>
@@ -85,7 +85,7 @@
         </div>
 
         <div class="grid-item">
-          <img src="assets/images/profile_male.png" alt="Mr. A headshot" />
+          <img src="assets/images/Ahnaf.jpeg" alt="Mr. Ahnaf" />
           <div class="member-content">
             <p class="member-name">Md Ahnaf Al Zabir</p>
             <p class="member-role">CS Undergrad</p>
@@ -118,50 +118,6 @@
         </div>
       </div>
     </div>
-
-    <!-- GRA / GTA
-    <div class="members-group reveal">
-      <h3 class="members-group-title">GRA / GTA</h3>
-      <div class="members-grid-container">
-        <div class="grid-item">
-          <img src="assets/images/profile_male.png" alt="Mr. B headshot" />
-          <div class="member-content">
-            <p class="member-name">Mr. B</p>
-            <p class="member-role">Graduate Research Assistant</p>
-            <p class="member-affil">Towson University</p>
-            <p class="member-bio">
-              Researches robust evaluation and red-teaming of generative models, emphasizing
-              reproducibility and practical deployment.
-            </p>
-            <div class="member-links">
-              <a class="scholar" href="#" aria-label="Google Scholar">
-                <img src="assets/images/scholar.png" alt="Google Scholar" />
-              </a>
-              <a class="github" href="#" aria-label="GitHub"><i class="fa fa-github"></i></a>
-              <a class="linkedin" href="#" aria-label="LinkedIn"><i class="fa fa-linkedin"></i></a>
-            </div>
-          </div>
-        </div>
-        <div class="grid-item">
-          <img src="assets/images/profile_female.png" alt="Mr. C headshot" />
-          <div class="member-content">
-            <p class="member-name">Mr. C</p>
-            <p class="member-role">Graduate Research Assistant</p>
-            <p class="member-affil">Towson University</p>
-            <p class="member-bio">
-              Builds tooling for usable privacy and consent management in AI-enabled applications.
-            </p>
-            <div class="member-links">
-              <a class="scholar" href="#" aria-label="Google Scholar">
-                <img src="assets/images/scholar.png" alt="Google Scholar" />
-              </a>
-              <a class="github" href="#" aria-label="GitHub"><i class="fa fa-github"></i></a>
-              <a class="linkedin" href="#" aria-label="LinkedIn"><i class="fa fa-linkedin"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
 
     <!-- Research Interns -->
     <div class="members-group reveal">
