--- a/pages/projects.html
+++ b/pages/projects.html
@@ -93,9 +93,9 @@
             <!-- <span class="proj-badge is-current">Current</span> -->
             <span class="proj-area">Misc</span>
           </div>
-          <h4 class="project-title">Misc</h4>
+          <h4 class="project-title">GenAI in Transportation Systems</h4>
           <p class="project-summary">
-            TBD
+            GenAI in Transportation Systems uses generative AI to simulate scenarios, create synthetic data, and provide adaptive solutions, enabling safer, smarter, and more user-centric mobility.
           <div class="project-links">
             <!-- <a class="proj-link" href="#">Overview</a>
                     <a class="proj-link" href="#">Artifacts</a> -->
