--- a/pages/members.html
+++ b/pages/members.html
@@ -59,7 +59,8 @@
             <p class="member-role">MSc in ITM</p>
             <p class="member-affil">UT Dallas</p>
             <p class="member-bio">
-              TBD
+              Working on IoT sensor data security, developing validated datasets,
+              preprocessing pipelines, and fine-tuning modern LLMs (Ollama, Qwen, OpenAI) for anomaly detection.
             </p>
             <button class="member-toggle" aria-expanded="false" aria-controls="member-a-extra">More</button>
             <div id="member-a-extra" class="member-extra" aria-hidden="true">
@@ -75,11 +76,11 @@
               </ul>
             </div>
             <div class="member-links">
-              <a class="scholar" href="#" aria-label="Google Scholar">
+              <!-- <a class="scholar" href="#" aria-label="Google Scholar">
                 <img src="assets/images/scholar.png" alt="Google Scholar" />
-              </a>
-              <a class="github" href="#" aria-label="GitHub"><i class="fa fa-github"></i></a>
-              <a class="linkedin" href="#" aria-label="LinkedIn"><i class="fa fa-linkedin"></i></a>
+              </a> -->
+              <a class="github" href="https://github.com/Anamika990" aria-label="GitHub"><i class="fa fa-github"></i></a>
+              <a class="linkedin" href="https://www.linkedin.com/in/anamika-utd/" aria-label="LinkedIn"><i class="fa fa-linkedin"></i></a>
             </div>
           </div>
         </div>
