--- a/pages/news.html
+++ b/pages/news.html
@@ -21,12 +21,38 @@
             Open Positions: Hiring students for Spring 2026!
           </h3>
           <p class="news-summary">
-            Hiring students for Fall 2025 and Spring 2026! If you are passionate
+            Hiring students for Spring 2026 and Fall 2026! If you are passionate
             about research, eager to explore impactful ideas, and committed to
             producing high-quality work, I would love to connect. Please feel
             free to reach out to me via email at kakbar@towson.edu.
           </p>
           <a class="news-button" href="#">See more</a>
+        </div>
+      </article>
+
+      <!-- Example: Event post -->
+      <article class="news-item has-media">
+        <a class="news-media" href="https://devpost.com/software/cool-project-jbd71v?ref_content=user-portfolio&ref_feature=in_progress" aria-label="HackWesTX 2025">
+          <img src="assets/images/ahnaf_hackathon.jpeg" alt="HackWesTX 2025" />
+        </a>
+        <div class="news-body">
+          <div class="news-meta">
+            <div class="news-date" aria-label="Published on Sep 15, 2025">
+              <span class="day">15</span>
+              <span class="month">Sep</span>
+              <span class="year">2025</span>
+            </div>
+            <span class="news-badge is-event">Achievement</span>
+          </div>
+          <h3 class="news-title">
+            HackWesTX 2025 Champions – Ahnaf shine at Texas Tech
+          </h3>
+          <p class="news-summary">
+            We are proud to share that Ahnaf and his team emerged as champions at HackWesTX 2025, Texas Tech University’s 6th
+            annual hackathon held in Lubbock. Their innovative work earned them the top spot, and each team member was awarded an
+            iPad in recognition of their achievement.
+          </p>
+          <a class="news-button" href="https://devpost.com/software/cool-project-jbd71v?ref_content=user-portfolio&ref_feature=in_progress">See more</a>
         </div>
       </article>
 
