--- a/pages/projects.html
+++ b/pages/projects.html
@@ -19,7 +19,7 @@
           <div class="project-links">
             <!-- <a class="proj-link" href="#">Overview</a>
             <a class="proj-link" href="#">Publications</a> -->
-            <a class="proj-link alt" href="#">See more</a>
+            <a class="proj-link alt is-disabled" href="#" aria-disabled="true" tabindex="-1">See more</a>
           </div>
         </article>
 
@@ -36,7 +36,7 @@
           <div class="project-links">
             <!-- <a class="proj-link" href="#">Overview</a>
             <a class="proj-link" href="#">Artifacts</a> -->
-            <a class="proj-link alt" href="#">See more</a>
+            <a class="proj-link alt is-disabled" href="#" aria-disabled="true" tabindex="-1">See more</a>
           </div>
         </article>
 
@@ -53,7 +53,7 @@
           <div class="project-links">
             <!-- <a class="proj-link" href="#">Overview</a>
                     <a class="proj-link" href="#">Artifacts</a> -->
-            <a class="proj-link alt" href="#">See more</a>
+            <a class="proj-link alt is-disabled" href="#" aria-disabled="true" tabindex="-1">See more</a>
           </div>
         </article>
 
@@ -69,7 +69,7 @@
           <div class="project-links">
             <!-- <a class="proj-link" href="#">Overview</a>
                     <a class="proj-link" href="#">Artifacts</a> -->
-            <a class="proj-link alt" href="#">See more</a>
+            <a class="proj-link alt is-disabled" href="#" aria-disabled="true" tabindex="-1">See more</a>
           </div>
         </article>
 
@@ -84,7 +84,7 @@
           <div class="project-links">
             <!-- <a class="proj-link" href="#">Overview</a>
                     <a class="proj-link" href="#">Artifacts</a> -->
-            <a class="proj-link alt" href="#">See more</a>
+            <a class="proj-link alt is-disabled" href="#" aria-disabled="true" tabindex="-1">See more</a>
           </div>
         </article>
 
@@ -96,10 +96,11 @@
           <h4 class="project-title">GenAI in Transportation Systems</h4>
           <p class="project-summary">
             GenAI in Transportation Systems uses generative AI to simulate scenarios, create synthetic data, and provide adaptive solutions, enabling safer, smarter, and more user-centric mobility.
+          </p>
           <div class="project-links">
             <!-- <a class="proj-link" href="#">Overview</a>
                     <a class="proj-link" href="#">Artifacts</a> -->
-            <a class="proj-link alt" href="#">See more</a>
+            <a class="proj-link alt is-disabled" href="#" aria-disabled="true" tabindex="-1">See more</a>
           </div>
         </article>
       </div>
